# White_Tigger-with-ros2-control-in-mujoco

./: CMakeLists.txt  build_and_send.sh  lcm_msg.lcm
include/: BalanceCtrl.h  Estimator.h  Kenimatics_normal_solution.h  LowPassFilter.h  Reversal_solution.h  mathTypes.h  mathtool.h
include/FSM/: Balance_State.h  ControlComponent.h  EnumClassList.h  FSM.h  Free_Stand_State.h  Free_State.h  Jump_State.h  Stand_State.h  Trotting_State.h  UserCmd.h
include/Gait/: FeetEndCal.h  GaitGenerator.h  WaveGenerator.h
include/dm_SDK/: damiao.h
include/low/: LowState.h
lcm_msg/: __init__.py  lcm_vel_cmd.py
src/: start.cpp
src/FSM/: Balance_State.cpp  ControlComponent.cpp  FSM.cpp  Free_Stand_State.cpp  Free_State.cpp  Jump_State.cpp  Passive_State.cpp  Sit_Down_State.cpp  Stand_State.cpp  Trotting_State.cpp  UserCmd.cpp
src/Gait/: FeetEndCal.cpp  GaitGenerator.cpp  WaveGenerator.cpp
src/common/: BalanceCtrl.cpp  Estimator.cpp  Imu.cpp  LowPassFilter.cpp  Robot.cpp
src/control_pkg/: CMakeLists.txt  package.xml
src/control_pkg/controller_config/: config.yaml  mujoco_ros2_control_plugins.yaml  pid_config.yaml
src/control_pkg/include/: CTP.h  Estimator.h  Imu.h  Robot.h  TimeMaker.h  mathtool.h  plot.hpp
src/control_pkg/include/FSM/: ControlComponent.h  FSM.h  FSMState.h  Passive_State.h  Sit_Down_State.h  Stand_State.h  Trotting_State.h  UserCmd.h
src/control_pkg/include/Gait/: FeetEndCal.h  GaitGenerator.h  WaveGenerator.h
src/control_pkg/include/IOPort/: IORos.h
src/control_pkg/include/MPC/: CTP.h  mpc.h  wbc.h
src/control_pkg/include/dm_SDK/: SerialPort.h
src/control_pkg/include/lcm_msg_cpp/: lcm_vel_cmd.hpp
src/control_pkg/include/low/: LowCmd.h  LowState.h  servo.h
src/control_pkg/launch/: bringup.launch.py  mujoco_bringup.launch.py  unitree_bringup.launch.py
src/control_pkg/ros2_control_config/: control.ros2_control.xacro  unitree_ros2_control.xacro
src/control_pkg/rviz_config/: rviz.rviz
src/control_pkg/src/: start.cpp
src/control_pkg/src/FSM/: ControlComponent.cpp  FSM.cpp  FSMState.cpp  Free_Stand_State.cpp  Free_State.cpp  Passive_State.cpp  Sit_Down_State.cpp  Stand_State.cpp  Trotting_State.cpp  UserCmd.cpp
src/control_pkg/src/Gait/: FeetEndCal.cpp  GaitGenerator.cpp  WaveGenerator.cpp
src/control_pkg/src/IOPort/: IORos.cpp
src/control_pkg/src/MPC/: CTP.cpp  mpc.cpp  wbc.cpp
src/control_pkg/src/common/: BalanceCtrl.cpp  CTP.cpp  Estimator.cpp  Imu.cpp  Robot.cpp
src/control_pkg/src/damiao_SDK/: damiao.cpp
src/control_pkg/src/low/: LowCmd.cpp  LowState.cpp  servo.cpp
src/control_pkg/src/math/: Kenimatics_normal_solution.cpp  Reversal_solution.cpp
src/descrip_pkg/: CMakeLists.txt  package.xml
src/descrip_pkg/config/: rviz.rviz
src/descrip_pkg/launch/: description.launch.py
src/descrip_pkg/urdf/: White_Tigger.xml  small_dog.urdf  small_dog_copy.urdf  total.urdf.xacro  unitree.urdf.xacro
src/descrip_pkg/urdf/meshes/: base_link.stl  bl_calf_Link.stl  bl_foot_Link.stl  br_calf_Link.stl  br_foot_Link.stl  fl_calf_Link.stl  fl_foot_Link.stl  fr_calf_Link.stl  fr_foot_Link.stl
src/imu_pkg/: CMakeLists.txt  package.xml
src/imu_pkg/src/: imu.cpp
src/low/: LowCmd.cpp
src/mit_controllers/: CMakeLists.txt  mit_controller_plugin.xml  package.xml
src/mit_controllers/include/: mit_controllers.hpp
src/mit_controllers/src/: mit_controllers.cpp
src/motor_control_msgs/: CMakeLists.txt  package.xml
src/motor_control_msgs/msg/: DmInterface.msg
src/unitree_controller/: CMakeLists.txt  package.xml  unitree_controller_plugin.xml
src/unitree_controller/include/: unitree_controller.hpp
src/unitree_controller/src/: unitree_controller.cpp
src/unitree_hardware_interface/: CMakeLists.txt  package.xml  unitree_hardware_interface_plugin.xml
src/unitree_hardware_interface/include/: unitree_hardware_interface.hpp
src/unitree_hardware_interface/src/: unitree_hardware_interface.cpp
